--- a/Scripts.ipynb
+++ b/Scripts.ipynb
@@ -48,6 +48,81 @@
     "        print('File not found')\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "  <meta charset=\"UTF-8\">\n",
+    "  <title>Python and Bash Scripts Repository</title>\n",
+    "  <style>\n",
+    "    body {\n",
+    "      font-family: Arial, sans-serif;\n",
+    "      margin: 0;\n",
+    "      padding: 0;\n",
+    "    }\n",
+    "    header {\n",
+    "      background-color: #333;\n",
+    "      color: #fff;\n",
+    "      padding: 20px;\n",
+    "      text-align: center;\n",
+    "    }\n",
+    "    .container {\n",
+    "      margin: 20px;\n",
+    "    }\n",
+    "    h1 {\n",
+    "      font-size: 32px;\n",
+    "      margin-bottom: 20px;\n",
+    "    }\n",
+    "    h2 {\n",
+    "      font-size: 24px;\n",
+    "      margin-bottom: 10px;\n",
+    "    }\n",
+    "    p {\n",
+    "      margin-bottom: 20px;\n",
+    "    }\n",
+    "    pre {\n",
+    "      background-color: #f5f5f5;\n",
+    "      border: 1px solid #ddd;\n",
+    "      padding: 10px;\n",
+    "      overflow-x: auto;\n",
+    "    }\n",
+    "  </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "  <header>\n",
+    "    <h1>Python and Bash Scripts Repository</h1>\n",
+    "  </header>\n",
+    "  <div class=\"container\">\n",
+    "    <h1>GitHub - M-Hamza-dost/Python-Bash-Scripts</h1>\n",
+    "    <p>This repository contains a collection of Python and Bash scripts that I have written for various purposes. Feel free to browse the scripts and use them as needed.</p>\n",
+    "\n",
+    "    <h2>Scripts</h2>\n",
+    "    <p>Here are the scripts available in this repository:</p>\n",
+    "    <ul>\n",
+    "      <li><strong>script.py</strong> - A Python script that performs some task.</li>\n",
+    "    </ul>\n",
+    "\n",
+    "    <h2>Usage</h2>\n",
+    "    <p>To use the scripts, simply clone the repository and navigate to the script you want to run. For example, to run the Python script, you can use the following command:</p>\n",
+    "    <pre>python script.py</pre>\n",
+    "    <p>Make sure you have the necessary dependencies installed before running the scripts.</p>\n",
+    "\n",
+    "    <h2>Contributing</h2>\n",
+    "    <p>If you have any suggestions or improvements for the scripts, feel free to fork the repository and submit a pull request. I'm always happy to collaborate and improve the scripts.</p>\n",
+    "  </div>\n",
+    "</body>\n",
+    "</html>"
+   ]
   }
  ],
  "metadata": {
